--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body>
 
-    {%- include header.html -%}
+    {% comment %} {%- include header.html -%} {% endcomment %}
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
