--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@ layout: default
 
   <h2 class="post-list-heading">Assets</h2>
   <h3>
-    <a class="post-link" href="assets/resources/">
+    <a class="post-link" href="assets/resources/index.html">
       Resources
     </a>
   </h3>
